fix bug issue with header and body overlap

--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@ header {
     width: 100%;
     background-color: rgb(0, 0, 0);
     padding: 5px;
+    z-index: 2;
 
 }
 
@@ -26,7 +27,7 @@ nav a:link {
 }
 
 .bg-chef {
-    display: flex;
+    display: fixed;
     flex-direction: column;
     padding-top: 3em;
     padding-bottom: 3em;
@@ -71,8 +72,10 @@ section.ecmlogo {
 
 }
 
+
+
 section {
-    display: block;
+    display: absolute;
     width: 100%;
     padding-bottom,
     : 1em;
